[project]
name = "nonebot-plugin-nettools"
version = "0.1"
description = "Provide some web functions!"
authors = [{ name = "JohnRichard4096", email = "windowserror@163.com" }]
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-adapter-onebot>=2.0.0",
    "python-dotenv>=0.21.0",
    "ping3>=0.4.0",
    "mcstatus>=1.0.0",
    "aiohttp>=3.9.0",
]
requires-python = ">=3.9, <4.0"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
keywords = ["net", "nonebot"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.urls]
"Homepage" = "https://github.com/JohnRichard4096/plugin-nettools"
"Source" = "https://github.com/JohnRichard4096/plugin-nettools"
"Issue Tracker" = "https://github.com/JohnRichard4096/plugin-nettools/issues"
